wtx-macros/tests/ui/error_enum/bad_aux_data.stderr
error: This method must be named `foo_data`
 --> tests/ui/error_enum/bad_aux_data.rs:6:8
  |
6 |     fn fdsfqw() {}
  |        ^^^^^^
